--- a/app/globals.css
+++ b/app/globals.css
@@ -13,8 +13,8 @@
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
 
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
+    --primary: 155 89% 58%;
+    --primary-foreground: 0deg 0% 3.92%;
 
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
