--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,10 @@
     --ring: 0 0% 3.9%;
 
     --radius: 0.5rem;
+
+    --purple: 255deg 78.3% 63.9%
+    --purple-dark: 240deg 64.9% 52%
+    --cyan: 194deg 86.4% 59.6%
   }
 
   .dark {
@@ -63,6 +67,68 @@
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
     --ring: 0 0% 83.1%;
+  }
+
+  .shadow {
+    position: absolute;
+    background: hsl(var(--primary) / 0%);
+    border-radius: 24px;
+    rotate: 35deg;
+
+    width: 260px;
+    top: 200px;
+    height: 400px;
+    filter: blur(150px);
+    animation: shadow-slide infinite 4s linear alternate;
+    z-index: -1;
+  }
+
+  @keyframes shadow-slide {
+    from {
+      background: hsl(var(--primary) / 20%);
+      right: 460px;
+    }
+    to {
+      background: hsl(var(--primary) / 80%);
+      right: 160px;
+    }
+  }
+
+  @media (max-width: 1024px) {
+    .shadow {
+      top: 70px;
+    }
+
+    @keyframes shadow-slide {
+      from {
+        background: hsl(var(--primary) / 20%);
+        right: 460px;
+      }
+      to {
+        background: hsl(var(--primary) / 50%);
+        right: 160px;
+      }
+    }
+  }
+
+  @media (max-width: 768px) {
+    .shadow {
+      top: 70px;
+      width: 100px;
+      height: 350px;
+      filter: blur(60px);
+    }
+
+    @keyframes shadow-slide {
+      from {
+        background: hsl(var(--primary) / 20%);
+        right: 280px;
+      }
+      to {
+        background: hsl(var(--primary) / 30%);
+        right: 100px;
+      }
+    }
   }
 }
 
